--- a/src/app/legal.module.css
+++ b/src/app/legal.module.css
@@ -13,6 +13,9 @@
   top: 0;
   backdrop-filter: blur(20px);
   z-index: 100;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .back {
